<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/main_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessNumber_GmaePage"
    android:padding="16dp">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="60dp">

        <EditText
            android:id="@+id/inputGuessNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_rectangle_button"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:hint="@string/input_four_number"
            android:inputType="number"
            android:maxLength="4"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/reCheck_Button"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/reCheck_Button"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/recheck_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/reStart_Button"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/reStart_Button"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:text="@string/restart_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/rectangle_button"
        android:backgroundTint="@color/black"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHistoryLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="12dp"
            android:text="@string/guesshistory_text"
            android:textColor="@color/light_green"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/HistoryList_Scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvHistoryLabel"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:id="@+id/HistoryList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_green"
                android:textSize="25sp" />
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
